Updated authors section.

--- a/psi_ru/ru_install.html
+++ b/psi_ru/ru_install.html
@@ -1,8 +1,7 @@
 ﻿Перевод: Русский<br>
 Авторы:<br>
-<a href="mailto:mpolk@kt-privat.donetsk.ua">Дмитрий Степаненко</a><br>
-<a href="mailto:greycat@altlinux.org">Михаил Якшин</a><br>
 <a href="mailto:mblsha@users.sourceforge.net">Михаил Пищагин</a><br>
+<small>Полный список авторов перевода можно найти в диалоге «О программе» на вкладке «Перевод».</small>
 <br>
 Лицензия: GPL<br>
 <h3>Инструкции по установке русского языка в Psi</h3>
