--- a/psi_ru/ru_install.html
+++ b/psi_ru/ru_install.html
@@ -5,11 +5,11 @@
 <br>
 Лицензия: GPL<br>
 <h3>Инструкции по установке русского языка в Psi</h3>
-1) Скачайте файл руссификации, щелкнув по ссылке «Lang Pack» в нижней части
-страницы.<br><br>	
+1) Скачайте файл руссификации, щелкнув по ссылке «Psi translation - Русский» в верхней части
+страницы.<br><br>
 2) Поместите файл в нужный каталог в зависимости от вашей операционной системы:
 <br><br>
-<b>GNU/Linux</b> — скопируйте <i>psi_ru.qm</i> to <tt>$HOME/.psi/</tt>
+<b>GNU/Linux</b> и <b>Mac OS X</b> — скопируйте <i>psi_ru.qm</i> в <tt>$HOME/.psi/</tt>
 <br><br>
 <b>Windows 95/98/Me</b> — скопируйте <i>psi_ru.qm</i> в C:\Program Files\Psi\PsiData
 (если вы установили Psi в <nobr>какое-то</nobr> другое место, скорректируйте маршрут соответственно).
@@ -18,7 +18,7 @@
 <br>
 <p class="sidebox">
 <b>а)</b> скопируйте </i>psi_ru.qm</i> в <tt>C:\Program Files\Psi</tt>
-(если вы установили Psi в <nobr>какое-то</nobr> другое место, скорректируйте маршрут соответственно).	
+(если вы установили Psi в <nobr>какое-то</nobr> другое место, скорректируйте маршрут соответственно).
 <br>
 <b>б)</b> если у вас нет административных прав, скопируйте <i>psi_ru.qm</i> в
 <tt>C:\Documents and Settings\USERNAME\PsiData</tt>
